--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     <title>Home</title>
 </head>
 <body>
-    <div class="header wow bounceIn">
+    <div class="header wow bounceInDown">
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
