--- a/html/wordington-diploma-in-biblical-leadership.html
+++ b/html/wordington-diploma-in-biblical-leadership.html
@@ -4,34 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Wordington Leadership Certificate Programme</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
-    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
+    <link rel="stylesheet" href="../js/jquery.min.js" />
+    <link rel="stylesheet" href="../css/bootstrap.min.css">
+    <script src="../js/bootstrap.min.js"></script>
     <link rel='stylesheet' href='../css/animate.min.css'>
     <script src='../js/wow.min.js'></script>
+    <script src="../js/font.js"></script>
     <link rel="stylesheet" href="../css/leaderShip.css">
 </head>
 <body>
     <div class="itemHeader10 wow bounceInDown">
         <div class="container">
             <div class="nav-bar">
-                <div class="nav-links" id="nav-link">
-                    <div class="btn-close">
-                        <i class="fas fa-times" onclick="closeMenu()"></i>
-                    </div>
-                    <ul>
-                        <li><a href="index.html" style="color: white;">Home</a></li>
-                        
-                    </ul>
+                <div class="nav-link" id="nav-link">
+                    <a href="index.html">Home</a>
                 </div>
             </div>
-            <div class="btn-bars">
-                <i class="fas fa-bars" onclick="showMenu()"></i>
-            </div>
-        </div>
-        <div class="btn-bars">
-            <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
             Wordington Diploma in Biblical Leadership
