--- a/html/about-us.html
+++ b/html/about-us.html
@@ -17,21 +17,9 @@
         <div class="container">
             <div class="nav-bar">
                 <div class="nav-links" id="nav-link">
-                    <div class="btn-close">
-                        <i class="fas fa-times" onclick="closeMenu()"></i>
-                    </div>
-                    <ul>
-                        <li><a href="index.html" style="color: white;">Home</a></li>
-                        
-                    </ul>
+                        <a href="index.html" >Home</a>
                 </div>
             </div>
-            <div class="btn-bars">
-                <i class="fas fa-bars" onclick="showMenu()"></i>
-            </div>
-        </div>
-        <div class="btn-bars">
-            <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx12">
            ABOUT-US
