--- a/html/wordington-doctorate-programme-in-leadership.html
+++ b/html/wordington-doctorate-programme-in-leadership.html
@@ -16,22 +16,10 @@
     <div class="itemHeader4 wow bounceInDown">
         <div class="container">
             <div class="nav-bar">
-                <div class="nav-links" id="nav-link">
-                    <div class="btn-close">
-                        <i class="fas fa-times" onclick="closeMenu()"></i>
-                    </div>
-                    <ul>
-                        <li><a href="index.html" style="color: white;">Home</a></li>
-                        
-                    </ul>
+                <div class="nav-link" id="nav-link">
+                        <a href="index.html">Home</a>
                 </div>
             </div>
-            <div class="btn-bars">
-                <i class="fas fa-bars" onclick="showMenu()"></i>
-            </div>
-        </div>
-        <div class="btn-bars">
-            <i class="fas fa-bars" onclick="showMenu()"></i>
         </div>
         <div class="xxx2">
             Wordington Leadership Programmes
