--- a/html/wordington-certificate-programme-in-biblical-studies.html
+++ b/html/wordington-certificate-programme-in-biblical-studies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title> Wordington Certificate Programme in Biblical Studies/title>
     <link rel="stylesheet" href="../js/jquery.min.js" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/bootstrap.min.js"></script>
@@ -31,17 +31,10 @@
             <div class="aaaa">
                 <div class="title">Certificate Programmes </div>
                 <div>
-                    Wordington Certificate Programme in Biblical studies is designed to
-                    develop and establish a strong foundation in selective knowledge,
-                    understanding and application of key Biblical concepts.
+                    Wordington Certificate Programme in Biblical studies is designed to develop and establish a strong foundation in selective knowledge, understanding and application of key Biblical concepts. 
                 </div>
                 <div>
-                    
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in Biblical studies. This programme is meant for beginners who are
-                    aiming to build their understanding of Biblical knowledge and build a
-                    ‘call-oriented’ career in Christian ministry. A few of the Certificate
-                    Programmes is listed below:
+                    Wordington offers a range of Certificate programmes for you to advance in Biblical studies. This programme is meant for beginners who are aiming to build their understanding of Biblical knowledge and build a ‘call-oriented’ career in Christian ministry. A few of the Certificate Programmes is listed below:
                 </div>
                 <div class="x-x-x">
                     Wordington Certificate in: <br> <br>
@@ -67,13 +60,11 @@
                     The Letters of Peter.<br> <br>
 
                     The Letter of James.<br> <br>
+                    
                     The Book of Revelations<br> <br>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
