--- a/html/wordington-certificate-programme-in-human-resource-management.html
+++ b/html/wordington-certificate-programme-in-human-resource-management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Certificate Programme in Human Resource Management</title>
     <link rel="stylesheet" href="../js/jquery.min.js" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/bootstrap.min.js"></script>
@@ -30,15 +30,10 @@
             <div class="aaaa">
                 <div class="title">Certificate Programmes  </div>
                 <div>
-                    Wordington Certificate Programmes in Human Resource Management
-                    (HRM) are designed to develop and establish a strong foundation for
-                    those aiming to build up a successful career in HRM.
+                    Wordington Certificate Programmes in Human Resource Management (HRM) are designed to develop and establish a strong foundation for those aiming to build up a successful career in HRM. 
                 </div>
                 <div>
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in your HRM skills. This programme is meant for beginners who are
-                    aiming for a career in HRM. A few of the Certificate Programmes is listed
-                    below:
+                    Wordington offers a range of Certificate programmes for you to advance in your HRM skills. This programme is meant for beginners who are aiming for a career in HRM. A few of the Certificate Programmes is listed below:
                 </div>
                 <div class="x-x-x">
                     Wordington Certificate in:
@@ -67,9 +62,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
