--- a/html/wordington-diploma-in-biblical-leadership.html
+++ b/html/wordington-diploma-in-biblical-leadership.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title> Wordington Diploma in Biblical Leadership/title>
     <link rel="stylesheet" href="../js/jquery.min.js" />
     <link rel="stylesheet" href="../css/bootstrap.min.css">
     <script src="../js/bootstrap.min.js"></script>
@@ -30,24 +30,19 @@
             <div class="aaaa">
                 <div class="title">Graduate Diploma in Christian Leadership</div>
                 <div>
-                    is aimed to equip candidates with agile skills to lead the church and Christian
-                    organisations.
+                    Wordington Graduate Programme in Biblical studies is designed to capture the experiences of candidates from various Christian ministry situations and help them to process those experiences to develop them as future church leaders. Our Experience Enriched Knowledge approach reflects our model of developing ingenious and bespoke learning. 
                 </div>
                 <div>
-                    Wordington graduate diploma programme in Christian leadership is
-                    suitable for people in the Christian ministry and is a great opportunity to
-                    build up and boost your leadership skills.
+                    Graduate Diploma in Christian Leadership is aimed to equip candidates with agile skills to lead the church and Christian organisations. 
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of Christian leadership so as to effectively lead the
-                    Church, Christian community and Christian organisations.
+                    Wordington graduate diploma programme in Christian leadership is suitable for people in the Christian ministry and is a great opportunity to build up and boost your leadership skills. 
                 </div>
                 <div>
-                    The Wordington graduate diploma in Christian Leadership comprises of
-                    four units which can be credited towards Wordington Master of
-                    Leadership.
+                    The programme is suitable for those wishing to further develop their understanding of Christian leadership so as to effectively lead the Church, Christian community and Christian organisations. 
                 </div>
+                <div>
+                    The Wordington graduate diploma in Christian Leadership comprises of four units which can be credited towards Wordington Master of Leadership.                 </div>
                 <div>
                     The units offered are:
                 </div>
@@ -63,9 +58,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
