--- a/html/wordington-diploma-in-human-resource-management-programme.html
+++ b/html/wordington-diploma-in-human-resource-management-programme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title> Wordington Diploma in Human Resource Management Programme</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="xxx2">
-            Graduate Diploma in Human Resource Management 
+            Wordington Diploma in Human Resource Management Programme
         </div>
     </div>
     <div class="biblical">
@@ -30,23 +30,19 @@
             <div class="aaaa">
                 <div class="title">Graduate Diploma in Human Resource Management  </div>
                 <div>
-                    is aimed to equip candidates with agile skills to lead the workforce in organisations.
+                    Wordington Graduate Programme in HRM is designed to capture the professional experiences of candidates from various work situations and help enable them to process those experiences in the development of future HR Managers. Our Experience Enriched Knowledge approach reflects our model of developing ingenious and bespoke learning. 
                 </div>
                 <div>
-                    Wordington graduate diploma programme is suitable for people working
-                    in any profession and is a great opportunity to build up and boost your
-                    HRM skills.
+                    Graduate Diploma in Human Resource Management is aimed to equip candidates with agile skills to lead the workforce in organisations. .
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of HRM so as to effectively manage people in
-                    organisations.
+                    Wordington graduate diploma programme is suitable for people working in any profession and is a great opportunity to build up and boost your HRM skills. 
                 </div>
                 <div>
-                    The Wordington graduate diploma in HRM comprises of four units which
-                    can be credited towards Wordington Master of Human Resource
-                    Management.
+                    The programme is suitable for those wishing to further develop their understanding of HRM so as to effectively manage people in organisations. 
                 </div>
+                <div>
+                    The Wordington graduate diploma in HRM comprises of four units which can be credited towards Wordington Master of Human Resource Management.                 </div>
                 <div class="x-x-x">
                         The units offered are: <br> <br>
 
@@ -60,9 +56,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
