--- a/html/wordington-diploma-in-leadership-programme.html
+++ b/html/wordington-diploma-in-leadership-programme.html
@@ -22,7 +22,7 @@
             </div>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Diploma in Leadership Programme
         </div>
     </div>
     <div class="biblical">
@@ -30,37 +30,30 @@
             <div class="aaaa">
                 <div class="title">Graduate Diploma in Leadership</div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    Wordington Graduate Leadership Programme is designed to capture the experiences of candidates from various leadership situations and help them to process those experiences to develop them as future leaders. Our Experience Enriched Knowledge approach reflects our model of developing ingenious and bespoke learning. 
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
+                    Graduate Diploma in Leadership is aimed to equip candidates with agile skills to lead organisations and the society.
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
+                    Wordington graduate diploma programmes are suitable for people working in any profession and is a great opportunity to build up and boost your leadership skills. 
                 </div>
                 <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
+                    The programme is suitable for those wishing to further develop their understanding of leadership styles so as to effectively lead others and their businesses and organisations. 
                 </div>
+                <div>
+                    The Wordington graduate diploma in Leadership comprises of four units which can be credited towards Wordington Master of Leadership.                 </div>
                 <div>
                     The units offered are:
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
+                    Ethics and Leadership.<br> <br>
                     Leading Diversity. <br> <br>
                     Leadership and Decision Making. <br> <br>
                     Leading Teams. <br> <br>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
