--- a/html/wordington-doctorate-programme-in-human-resource-management.html
+++ b/html/wordington-doctorate-programme-in-human-resource-management.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Doctorate Programme in Human Resource Management.</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -22,8 +22,7 @@
             </div>
         </div>
         <div class="xxx2">
-            Wordington Doctorate Programme in Human
-            Resource Management.
+            Wordington Doctorate Programme in Human Resource Management.
         </div>
     </div>
     <div class="biblical">
@@ -31,28 +30,22 @@
             <div class="aaaa">
                 <div class="title">Doctorate in Leadership </div>
                 <div>
-                    Wordington Doctorate is a highly specialised (4-10 years duration)
-                    programme designed for established leaders in their chosen profession.
+                    Wordington Doctorate is a highly specialised (4-10 years duration) programme designed for established HRM professionals with extensive experience in senior HRM roles. 
                 </div>
                 <div>
-                    Please refer to Wordington Model to see how the research is designed.
+                    Please refer to Wordington Model to see how the research is designed. 
                 </div>
                 <div>
-                    The Wordington doctoral programme is your unique journey through the
-                    world of knowledge and experiences interwoven.
+                    The Wordington doctoral programme is your unique journey through the world of knowledge and experience interwoven. 
                 </div>
                 <div>
-                    As part of this programme you will lead by yourselves and Wordington
-                    will support you in your doctoral journey.
+                    As part of this programme you will lead by yourselves and Wordington will support you in this doctoral journey. 
                 </div>
-                <div>
-                    Please <a href="#">email us</a>  for more details and fees.
+                <div class="x-x-x">
+                    Please <a href="#"> email us</a>  for more details and fees.
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
