--- a/html/wordington-health-and-nursing-programmes.html
+++ b/html/wordington-health-and-nursing-programmes.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Health and Nursing Programmes</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -22,8 +22,7 @@
             </div>
         </div>
         <div class="xxx2">
-            Wordington Doctorate Programme in
-            Biblical studies
+            Wordington Health and Nursing Programmes
         </div>
     </div>
     <div class="biblical">
@@ -50,9 +49,6 @@
                 <div>  Please <a href="#">email us </a> for more details and fees.</div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
