--- a/html/wordington-leadership-certificate-programme.html
+++ b/html/wordington-leadership-certificate-programme.html
@@ -30,35 +30,25 @@
             <div class="aaaa">
                 <div class="title">Certificate Programmes</div>
                 <div>
-                    Wordington Certificate Programmes in Human Resource Management
-                    (HRM) are designed to develop and establish a strong foundation for
-                    those aiming to build up a successful career in HRM.
+                    Wordington Leadership Certificate Programme is designed to develop and establish a strong foundation in selective knowledge, understanding and application of key leadership concepts. 
                 </div>
                 <div>
-                    Wordington offers a range of Certificate programmes for you to advance
-                    in your HRM skills. This programme is meant for beginners who are
-                    aiming for a career in HRM. A few of the Certificate Programmes is listed
-                    below:
+                    Wordington offers a range of Certificate programmes for you to advance in your leadership development. This programme is meant for beginners who are aiming to build and advance a leadership-oriented career. A few of the Certificate Programmes is listed below:
                 </div>
                 <div class="x-x-x">
                     Wordington Certificate in: <br> <br>
-                    Fundamentals of Human Resource Management. <br> <br>
-                    Strategic Human Resource Management. <br> <br>
-                    Industrial Relations. <br> <br>
-                    Human Resource Planning. <br> <br>
-                    Job Design. <br> <br>
-                    Recruitment and Selection. <br> <br>
-                    Training and Development.  <br> <br>
-                    Performance Management.<br> <br>
-                    Rewards Management.<br> <br>
-                    Health and Safety.<br> <br>
-                    Managing Decision Making.<br> <br>
+                    Fundamentals of Leadership. <br> <br>
+                    Leadership Traits. <br> <br>
+                    Leadership Philosophy and Styles. <br> <br>
+                    Leadership Skills. <br> <br>
+                    Vision Creation. <br> <br>
+                    Emotional Intelligence. <br> <br>
+                    Self-Leadership.  <br> <br>
+                    Charismatic Leadership.<br> <br>
+                    Transformational Leadership.<br> <br>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
