--- a/html/wordington-master-of-human-resource-management-programme.html
+++ b/html/wordington-master-of-human-resource-management-programme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Master of Human Resource Management Programme</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -28,7 +28,7 @@
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Master of Human Resource Management </div>
+                <div class="title">Master of Human Resource Management.</div>
                 <div>
                     The Wordington Master of HRM is carefully designed to help candidates
                     to reflect on their own personal managerial capabilities, systematically
@@ -65,9 +65,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
