--- a/html/wordington-doctorate-programme-in-biblical-studies.html
+++ b/html/wordington-doctorate-programme-in-biblical-studies.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Doctorate Programme in
+        Biblical studies</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -35,7 +36,7 @@
                     programme designed for established Christian leaders.
                 </div>
                 <div>
-                    Please refer to <a href="#">Wordington Model</a>  to see how the research is designed.
+                    Please refer to Wordington Model  to see how the research is designed.
                 </div>
                 <div>
                     The Wordington doctoral programme is your unique journey through the
@@ -50,9 +51,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
