--- a/html/wordington-doctorate-programme-in-leadership.html
+++ b/html/wordington-doctorate-programme-in-leadership.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Doctorate Programme in Leadership</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -22,45 +22,30 @@
             </div>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Doctorate Programme in Leadership
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Leadership Programmes </div>
+                <div class="title">Doctorate in Leadership. </div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    Wordington Doctorate is a highly specialised (4-10 years duration) programme designed for established leaders in their chosen profession. 
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
+                    Please refer to Wordington Model to see how the research is designed. 
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
+                    The Wordington doctoral programme is your unique journey through the world of knowledge and experiences interwoven. 
                 </div>
                 <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
-                </div>
-                <div>
-                    The units offered are:
+                    As part of this programme you will lead by yourselves and Wordington will support you in your doctoral journey. 
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Please <a href="#"> email us</a>  for more details and fees.
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
