--- a/html/wordington-graduate-programme-in-biblical-studies.html
+++ b/html/wordington-graduate-programme-in-biblical-studies.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title> Wordington Graduate Programme in Biblical studies</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -30,10 +30,7 @@
             <div class="aaaa">
                 <div class="title">Master of Leadership </div>
                 <div>
-                    The Wordington Master of Christian Leadership programme is designed
-                    to help candidates to reflect on their own personal leadership
-                    capabilities, systematically record those and recycle using Biblical
-                    knowledge.
+                    The Wordington Master of Christian Leadership programme is designed to help candidates to reflect on their own personal leadership capabilities, systematically record those and recycle using Biblical knowledge. 
                 </div>
                 <div>
                     Wordington Master of Christian Leadership programme enable
@@ -69,9 +66,6 @@
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
