--- a/html/wordington-master-of-leadership-programme.html
+++ b/html/wordington-master-of-leadership-programme.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wordington Leadership Certificate Programme</title>
+    <title>Wordington Master of Leadership Programme</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&display=swap" rel="stylesheet">
@@ -22,45 +22,36 @@
             </div>
         </div>
         <div class="xxx2">
-            Wordington Leadership Programmes
+            Wordington Master of Leadership Programme
         </div>
     </div>
     <div class="biblical">
         <div class="container">
             <div class="aaaa">
-                <div class="title">Wordington Leadership Programmes </div>
+                <div class="title">Master of Leadership.</div>
                 <div>
-                    is aimed to equip candidates with
-                    agile skills to lead organisations and the society.
+                    The Wordington Master of Leadership programme is designed to help candidates to reflect on their own personal leadership capabilities, systematically record those and recycle using theoretical knowledge. 
                 </div>
                 <div>
-                    Wordington graduate diploma programmes are suitable for people
-                    working in any profession and is a great opportunity to build up and
-                    boost your leadership skills.
+                    Wordington Master of Leadership programme enable candidates to process their experiences, test them, analyse them by applying leadership theories, and re-apply the processed knowledge in professional situations. 
                 </div>
                 <div>
-                    The programme is suitable for those wishing to further develop their
-                    understanding of leadership styles so as to effectively lead others and
-                    their businesses and organisations.
+                    As candidates have their own unique experiences, Wordington follow a personalised approach in the Master of Leadership programme. This approach involves candidates working with us in our virtual Leadership laboratories and participating in Wordington Executive Challenge programmes. .
                 </div>
                 <div>
-                    The Wordington graduate diploma in Leadership comprises of four units
-                    which can be credited towards Wordington Master of Leadership.
+                    The Master of Leadership programme comprises of four units from the Certificate programme and four units from the diploma programme, and four units from the Master of Leadership programme. 
                 </div>
                 <div>
-                    The units offered are:
+                    The four units offered under the Master of Leadership programme are:
                 </div>
                 <div class="x-x-x">
-                    Ethics and Leadership. <br> <br>
-                    Leading Diversity. <br> <br>
-                    Leadership and Decision Making. <br> <br>
-                    Leading Teams. <br> <br>
+                    Leading Change. <br> <br>
+                    Leadership Style Specialisation (any one to be chosen from Transformational, Autocratic or Charismatic Leadership styles). <br> <br>
+                    Leadership Laboratory. <br> <br>
+                    Leadership Executive Challenge. <br> <br>
                 </div>
             </div>
         </div>
-    </div>
-    <div class="cvb">
-        <div>Bottom of the last page: Wordington Centre for Leadership and Management Development</div>
     </div>
     <div class="bottom">
         <div class="nbxxx"> 
